# telegram_bot_score_keeper

./: .env.sample  .gitignore  Cargo.toml  LICENSE  README.md
migrations/2022-10-24-062915_initial/: down.sql  up.sql
src/: main.rs
src/controllers/: database.rs  end_game.rs  game_state.rs  mod.rs  new_game.rs  register.rs  score_round.rs
src/core/: database.rs  game_aggregator.rs  game_handler.rs  message_helper.rs  mod.rs  traits.rs
src/games/: mod.rs
src/games/table/: game.rs  html_helper.rs  mod.rs  table.rs
src/games/tarok/: enums.rs  game.rs  html_helper.rs  mod.rs  tarok.rs
src/models/: chat.rs  mod.rs  round.rs  schema.rs  state.rs  user.rs
