[package]
name = "telegram_bot_score_keeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
teloxide = { version = "0.11", features = ["macros", "auto-send"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4"
once_cell = "1.10.0"
serde_any = "0.5.0"
dotenv = "0.15.0"
diesel = { version = "1.4.8", features = ["sqlite", "uuid", "r2d2"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
chrono = "0.4.22"